--- a/card.html
+++ b/card.html
@@ -799,9 +799,13 @@
   <!-- 🎁 Secret Easter Egg -->
   <div class="secret" id="secret">
     <div class="secret-box">
-      <h2>💖 You are truly special</h2>
-      <p>This world is brighter because you exist ✨<br>
+      <h2>💖 You are truly special <small>(because you got me as a friend)</small></h2>
+      <p>This world is brighter because you exist (htttt) ✨<br>
       May your day be filled with joy, love, and unforgettable moments!</p>
+      <p>Gussa me mtt dekhna yaar , bahut mehant laga hai yaar ....party de dena 😅😅😅</p>
+      <p>&</p>
+      <b>Happy Birthday Baklol</b><br>
+      <small>Aur Sorry maaf kr dena 🙏🙏🙏 agr haal filhaal me gussa dilaya hu to 😁😁😁😁</small><br>
       <button onclick="closeSecret()">Close</button>
     </div>
   </div>
